# hr-chatbot

cv_hr/: README.md  pyproject.toml
cv_hr/src/cv_hr/: crew.py  main.py  ui.py
cv_hr/src/cv_hr/config/: agents.yaml  tasks.yaml
cv_hr/src/cv_hr/tools/: custom_tool.py
