[project]
name = "cv_hr"
version = "0.1.0"
description = "cv_hr using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
cv_hr = "cv_hr.main:run"
run_crew = "cv_hr.main:run"
train = "cv_hr.main:train"
replay = "cv_hr.main:replay"
test = "cv_hr.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
